--- a/examples/4.OOP_Logistic_Multiclass.ipynb
+++ b/examples/4.OOP_Logistic_Multiclass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4c77909d",
    "metadata": {},
    "outputs": [
@@ -12,18 +12,17 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 150 entries, 0 to 149\n",
-      "Data columns (total 7 columns):\n",
+      "Data columns (total 6 columns):\n",
       " #   Column         Non-Null Count  Dtype   \n",
       "---  ------         --------------  -----   \n",
-      " 0   Id             150 non-null    int64   \n",
-      " 1   SepalLengthCm  150 non-null    float64 \n",
-      " 2   SepalWidthCm   150 non-null    float64 \n",
-      " 3   PetalLengthCm  150 non-null    float64 \n",
-      " 4   PetalWidthCm   150 non-null    float64 \n",
-      " 5   Species        150 non-null    category\n",
-      " 6   code           150 non-null    int8    \n",
-      "dtypes: category(1), float64(4), int64(1), int8(1)\n",
-      "memory usage: 6.4 KB\n"
+      " 0   SepalLengthCm  150 non-null    float64 \n",
+      " 1   SepalWidthCm   150 non-null    float64 \n",
+      " 2   PetalLengthCm  150 non-null    float64 \n",
+      " 3   PetalWidthCm   150 non-null    float64 \n",
+      " 4   Species        150 non-null    category\n",
+      " 5   code           150 non-null    int8    \n",
+      "dtypes: category(1), float64(4), int8(1)\n",
+      "memory usage: 5.2 KB\n"
      ]
     },
     {
@@ -39,7 +38,7 @@
       "\u001b[31mTypeError\u001b[39m: '(['SepalLengthCm'], ['SepalWidthCm'], ['PetalLengthCm'], ['PetalWidthCm'])' is an invalid key",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[31mInvalidIndexError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     12\u001b[39m df.info()\n\u001b[32m     14\u001b[39m df.head()\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m X_iris = \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSepalLengthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSepalWidthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPetalLengthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPetalWidthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m     17\u001b[39m y_iris = df[\u001b[33m'\u001b[39m\u001b[33mcode\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     19\u001b[39m iris_log_regression = LogisticRegression()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     19\u001b[39m df.info()\n\u001b[32m     21\u001b[39m df.head()\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m X_iris = \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSepalLengthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSepalWidthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPetalLengthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPetalWidthCm\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m     24\u001b[39m y_iris = df[\u001b[33m'\u001b[39m\u001b[33mcode\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     26\u001b[39m iris_log_regression = LogisticRegression()\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/Machine_Learning_OOP_Implementation_Examples/.venv/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4101\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4102\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4104\u001b[39m     indexer = [indexer]\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/Machine_Learning_OOP_Implementation_Examples/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:3817\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3812\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3814\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3815\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3816\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3817\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_check_indexing_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3818\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/Machine_Learning_OOP_Implementation_Examples/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:6059\u001b[39m, in \u001b[36mIndex._check_indexing_error\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   6055\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_check_indexing_error\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[32m   6056\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_scalar(key):\n\u001b[32m   6057\u001b[39m         \u001b[38;5;66;03m# if key is not a scalar, directly raise an error (the code below\u001b[39;00m\n\u001b[32m   6058\u001b[39m         \u001b[38;5;66;03m# would convert to numpy arrays and raise later any way) - GH29926\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m6059\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n",
@@ -48,6 +47,9 @@
     }
    ],
    "source": [
+    "# Doesn't work\n",
+    "# Was trying to code multiclass logistic regression to predict the species \n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -55,6 +57,13 @@
     "\n",
     "# Load Data\n",
     "df = pd.read_csv(\"data/Iris.csv\")\n",
+    "df = pd.DataFrame({\n",
+    "    'SepalLengthCm': df['SepalLengthCm'],\n",
+    "    'SepalWidthCm': df['SepalWidthCm'],\n",
+    "    'PetalLengthCm': df['PetalLengthCm'],\n",
+    "    'PetalWidthCm': df['PetalWidthCm'],\n",
+    "    'Species': df['Species']\n",
+    "})\n",
     "\n",
     "df.Species = pd.Categorical(df.Species)\n",
     "df['code'] = df.Species.cat.codes\n",
